force-app/main/default/objects/Site_Visit__c/fields/Age_Number__c.field-meta.xml
<CustomField>
    <fullName>Age_Number__c</fullName>
    <label>Age Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>