force-app/main/default/objects/Site_Visit__c/fields/Area_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Area_Sq_Ft__c</fullName>
    <label>Area ( Sq. Ft. )</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area_Sq_ft</valueSetName>
    </valueSet>
</CustomField>