force-app/main/default/objects/Site_Visit__c/fields/AV_video_shown__c.field-meta.xml
<CustomField>
    <fullName>AV_video_shown__c</fullName>
    <label>AV video shown?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>