force-app/main/default/objects/Site_Visit__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget less than 20 lakhs</fullName>
            </value>
            <value>
                <fullName>Budget of 20 to 30 lakhs</fullName>
            </value>
            <value>
                <fullName>Budget of 30 to 40 lakhs</fullName>
            </value>
            <value>
                <fullName>Budget of 40 to 50 lakhs</fullName>
            </value>
            <value>
                <fullName>Budget of 50 to 60 lakhs</fullName>
            </value>
            <value>
                <fullName>Budget of 60 to 70 lakhs</fullName>
            </value>
            <value>
                <fullName>Budget of 70 to 80 lakhs</fullName>
            </value>
            <value>
                <fullName>Budget of 80 to 90 lakhs</fullName>
            </value>
            <value>
                <fullName>Budget of 90 lac to 1Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 1Cr to 1.5 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 1.5Cr to 2 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget of 2 Cr to 3 Cr.</fullName>
            </value>
            <value>
                <fullName>Budget 3 Cr.+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>