force-app/main/default/objects/Site_Visit__c/fields/Buying_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Buying_Purpose__c</fullName>
    <label>Buying Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Buying_Purpose</valueSetName>
    </valueSet>
</CustomField>