force-app/main/default/objects/Site_Visit__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Site Visits (Channel Partner)</relationshipLabel>
    <relationshipName>Site_Visits1</relationshipName>
    <type>Lookup</type>
</CustomField>