force-app/main/default/objects/Site_Visit__c/fields/City_1__c.field-meta.xml
<CustomField>
    <fullName>City_1__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>