force-app/main/default/objects/Site_Visit__c/fields/City_Name__c.field-meta.xml
<CustomField>
    <fullName>City_Name__c</fullName>
    <label>City Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Thane</fullName>
            </value>
            <value>
                <fullName>Raigad</fullName>
            </value>
            <value>
                <fullName>Panvel</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>