force-app/main/default/objects/Site_Visit__c/fields/Clash_Details__c.field-meta.xml
<CustomField>
    <fullName>Clash_Details__c</fullName>
    <label>Clash Details</label>
    <type>TextArea</type>
</CustomField>