force-app/main/default/objects/Site_Visit__c/fields/Closing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Closing_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closing Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Site Visit</relationshipLabel>
    <relationshipName>Site_Visit</relationshipName>
    <type>Lookup</type>
</CustomField>