force-app/main/default/objects/Site_Visit__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>AComments</label>
    <type>TextArea</type>
</CustomField>