force-app/main/default/objects/Site_Visit__c/fields/Comments_Is_Null__c.field-meta.xml
<CustomField>
    <fullName>Comments_Is_Null__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comments Is Null</label>
    <type>Checkbox</type>
</CustomField>