force-app/main/default/objects/Site_Visit__c/fields/Country_1__c.field-meta.xml
<CustomField>
    <fullName>Country_1__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>