force-app/main/default/objects/Site_Visit__c/fields/CP_Lead__c.field-meta.xml
<CustomField>
    <fullName>CP_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Lead</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>CP_Lead__c.Channel_Partner_Name__c</field>
            <operation>equals</operation>
            <valueField>$Source.Channel_Partner__c</valueField>
        </filterItems>
        <filterItems>
            <field>CP_Lead__c.CP_Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.CP_Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CP_Lead__c</referenceTo>
    <relationshipLabel>Site Visits</relationshipLabel>
    <relationshipName>Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>