force-app/main/default/objects/Site_Visit__c/fields/CP_Mobile__c.field-meta.xml
<CustomField>
    <fullName>CP_Mobile__c</fullName>
    <label>Partner Mobile</label>
    <type>Phone</type>
</CustomField>