force-app/main/default/objects/Site_Visit__c/fields/CP_Project__c.field-meta.xml
<CustomField>
    <fullName>CP_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Project</label>
    <referenceTo>CP_Project__c</referenceTo>
    <relationshipLabel>Site Visit</relationshipLabel>
    <relationshipName>Site_Visit</relationshipName>
    <type>Lookup</type>
</CustomField>