force-app/main/default/objects/Site_Visit__c/fields/CP_Unique_Code__c.field-meta.xml
<CustomField>
    <fullName>CP_Unique_Code__c</fullName>
    <label>Partner Unique Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>