force-app/main/default/objects/Site_Visit__c/fields/Created_From_QR_Code__c.field-meta.xml
<CustomField>
    <fullName>Created_From_QR_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created From QR Code</label>
    <type>Checkbox</type>
</CustomField>