force-app/main/default/objects/Site_Visit__c/fields/Current_Residence_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Residence_Status__c</fullName>
    <label>Current Residence Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_Resident_Status</valueSetName>
    </valueSet>
</CustomField>