force-app/main/default/objects/Site_Visit__c/fields/Digital_CIF_completion__c.field-meta.xml
<CustomField>
    <fullName>Digital_CIF_completion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital CIF completion</label>
    <type>Checkbox</type>
</CustomField>