force-app/main/default/objects/Site_Visit__c/fields/Family_Size__c.field-meta.xml
<CustomField>
    <fullName>Family_Size__c</fullName>
    <label>Family Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joint Family</fullName>
            </value>
            <value>
                <fullName>Nuclear Family without Elders</fullName>
            </value>
            <value>
                <fullName>Nuclear Family with Elders</fullName>
            </value>
            <value>
                <fullName>Siblings Living Together</fullName>
            </value>
            <value>
                <fullName>Singles/Friends Living Together</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>