force-app/main/default/objects/Site_Visit__c/fields/GRE__c.field-meta.xml
<CustomField>
    <fullName>GRE__c</fullName>
    <label>GRE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nitin Choudhary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>