force-app/main/default/objects/Site_Visit__c/fields/Is_Customer_with_Family__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_with_Family__c</fullName>
    <label>Is Customer with Family?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>