force-app/main/default/objects/Site_Visit__c/fields/Is_Flow_Update__c.field-meta.xml
<CustomField>
    <fullName>Is_Flow_Update__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is used for ensuring the project type update flow and the validation rule do not clash</description>
    <label>Is Flow Update</label>
    <type>Checkbox</type>
</CustomField>