force-app/main/default/objects/Site_Visit__c/fields/Is_New_CP_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_New_CP_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is New CP Created</label>
    <type>Checkbox</type>
</CustomField>