force-app/main/default/objects/Site_Visit__c/fields/Is_Preregister_Visit__c.field-meta.xml
<CustomField>
    <fullName>Is_Preregister_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Preregister Visit</label>
    <type>Checkbox</type>
</CustomField>