force-app/main/default/objects/Site_Visit__c/fields/Is_QR_Customer__c.field-meta.xml
<CustomField>
    <fullName>Is_QR_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is QR Customer</label>
    <type>Checkbox</type>
</CustomField>