force-app/main/default/objects/Site_Visit__c/fields/Is_Sales_Manager_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Is_Sales_Manager_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sales Manager Assigned</label>
    <type>Checkbox</type>
</CustomField>