force-app/main/default/objects/Site_Visit__c/fields/Is_Share__c.field-meta.xml
<CustomField>
    <fullName>Is_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Share</label>
    <type>Checkbox</type>
</CustomField>