force-app/main/default/objects/Site_Visit__c/fields/Is_Site_Visit_Complete__c.field-meta.xml
<CustomField>
    <fullName>Is_Site_Visit_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Site Visit Complete</label>
    <type>Checkbox</type>
</CustomField>