force-app/main/default/objects/Site_Visit__c/fields/Is_Site_Visit_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Site_Visit_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Site Visit Completed?</label>
    <type>Checkbox</type>
</CustomField>