force-app/main/default/objects/Site_Visit__c/fields/Is_SMS_Send__c.field-meta.xml
<CustomField>
    <fullName>Is_SMS_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is SMS Send</label>
    <type>Checkbox</type>
</CustomField>