force-app/main/default/objects/Site_Visit__c/fields/Is_Source_Conflict__c.field-meta.xml
<CustomField>
    <fullName>Is_Source_Conflict__c</fullName>
    <label>Is Source Conflict</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>