force-app/main/default/objects/Site_Visit__c/fields/Is_SV_Share__c.field-meta.xml
<CustomField>
    <fullName>Is_SV_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is SV Share</label>
    <type>Checkbox</type>
</CustomField>