force-app/main/default/objects/Site_Visit__c/fields/Lead_Sub_source_Details__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_source_Details__c</fullName>
    <label>Lead Sub-source Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Sub_source__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sub_Source_Details</valueSetName>
    </valueSet>
</CustomField>