force-app/main/default/objects/Site_Visit__c/fields/Locality_details__c.field-meta.xml
<CustomField>
    <fullName>Locality_details__c</fullName>
    <label>Locality details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Locality__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Antop Hill</fullName>
            </value>
            <value>
                <fullName>Bhuleshwar</fullName>
            </value>
            <value>
                <fullName>Byculla</fullName>
            </value>
            <value>
                <fullName>Colaba</fullName>
            </value>
            <value>
                <fullName>Cumbala Hill</fullName>
            </value>
            <value>
                <fullName>Dadar</fullName>
            </value>
            <value>
                <fullName>Dadar east</fullName>
            </value>
            <value>
                <fullName>Dadar west</fullName>
            </value>
            <value>
                <fullName>Fort</fullName>
            </value>
            <value>
                <fullName>Girgaon</fullName>
            </value>
            <value>
                <fullName>Kalbadevi</fullName>
            </value>
            <value>
                <fullName>Kamathipura</fullName>
            </value>
            <value>
                <fullName>Malabar Hill</fullName>
            </value>
            <value>
                <fullName>Matunga</fullName>
            </value>
            <value>
                <fullName>Parel</fullName>
            </value>
            <value>
                <fullName>Lower parel east</fullName>
            </value>
            <value>
                <fullName>Lower parel west</fullName>
            </value>
            <value>
                <fullName>Sion</fullName>
            </value>
            <value>
                <fullName>Tardeo</fullName>
            </value>
            <value>
                <fullName>Umarkhadi</fullName>
            </value>
            <value>
                <fullName>Chembur</fullName>
            </value>
            <value>
                <fullName>Chembur east</fullName>
            </value>
            <value>
                <fullName>Chembur west</fullName>
            </value>
            <value>
                <fullName>Mankhurd</fullName>
            </value>
            <value>
                <fullName>Wadala</fullName>
            </value>
            <value>
                <fullName>Trombay</fullName>
            </value>
            <value>
                <fullName>Bhandup</fullName>
            </value>
            <value>
                <fullName>Bhandup east</fullName>
            </value>
            <value>
                <fullName>Bhandup west</fullName>
            </value>
            <value>
                <fullName>Govandi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>